styles/reusable/_loading-indicator.scss
@keyframes spin {
  100% {
    transform: rotate(360deg);
  }
}

.loading-indicator {
  flex-grow: 1;
  display: flex;
  justify-content: center;
  align-items: center;
}
.loading-indicator-auto-centered {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 10;
}
.loading-indicator-icon {
  --icon-max-size: 50px;
  --icon-size: 50%;
  max-width: var(--icon-max-size);
  max-height: var(--icon-max-size);
  width: var(--icon-size);
  height: var(--icon-size);
  fill: none;
  stroke: var(--color-white-50);
  stroke-width: 3;
  animation: spin 1000ms linear infinite forwards;
  .landing-page & {
    stroke: var(--color-black-20);
  }
}

